# keyheat

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  keyheat-spec.md
src/: aggregator.rs  config.rs  daemon.rs  error.rs  keycode.rs  keymap_linux.rs  keymap_windows.rs  listener.rs  listener_linux.rs  listener_mock.rs  listener_windows.rs  main.rs  storage.rs
src/report/: compute.rs  html.rs  layout.rs  mod.rs  query.rs
