[package]
name = "keyheat"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
dirs = "5"
open = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1"

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.12"
